Transforming Activmq Client to pom.scala.